--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,6 @@ SET(src thffmpeg.c)
 SET(luasrc init.lua test/test.lua)
 
 ADD_TORCH_PACKAGE(thffmpeg "${src}" "${luasrc}" "Video reader")
-TARGET_LINK_LIBRARIES(thffmpeg luaT TH avformat swscale)
+TARGET_LINK_LIBRARIES(thffmpeg luaT TH avformat swscale avcodec)
+INCLUDE_DIRECTORIES(${FFMPEG_INCLUDE_DIR})
 INSTALL(FILES "README.md" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/thffmpeg")
